# LICO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bdq_lico++_greedy.sh  bdq_lico_greedy.sh  lico_build.cpp  lico_decode.cpp  lico_estimate.cpp  lico_query.cpp  other_index.cpp  s_tree.cpp
build_other_2/: CMakeCache.txt  Makefile  cmake_install.cmake  lico_build  lico_build_none  lico_decode  lico_decode_none  lico_estimate  lico_query  lico_query_none  other
include/: config.hpp  la_vector_enumerate.hpp  lico_build.hpp  lico_decode.hpp  lico_enumerate.hpp  lico_epsilon_estimation.hpp  lico_fastpfor.hpp  lico_index.hpp  lico_index_build.hpp  lico_index_decode.hpp  lico_index_enumerate.hpp  lico_index_query.hpp  lico_kernel.hpp  lico_partition.hpp  lico_query.hpp  linear_spline.hpp  perf_event.hpp  piecewise_linear_model.hpp  tools.hpp
include/pgm-opt/: LIPO_data_partition local_parted.hpp  LIPO_data_partition preview_whole.hpp  LIPO_data_partition.hpp  optPFD_encode.hpp  other_index_optpfor.hpp  pgm_index_enumerate copy.hpp  pgm_index_query_org.hpp  pgm_index_residual_compressor.hpp  pgm_indexc.hpp  rice.hpp  zigzag_rice.hpp  zigzag_rice_right.hpp
